All functions named

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       body {
         height: 100%;
         background-color: var(--color-background);
-        margin: 0;
+        margin: 10;
         padding: 0;
         overflow-y: hidden;
       }
@@ -135,6 +135,6 @@
   <body>
     <h1>Lingo</h1>
     <script src="./game.js"></script>
-    <game></game>
+    <game-root></game-root>
   </body>
 </html>
