--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
     <meta name="sourceApp" content="games-crosswords">
-    <meta property="description" content="Understanding Wordle's javascript">
+    <meta property="description" content="Guess words, no daily limit">
     <meta property="og:title" content="Lingo">
     <meta property="og:url" content="">
-    <meta property="og:description" content="Look at the source code">
+    <meta property="og:description" content="Guess words, no daily limit">
     <meta property="og:image" content="./Meta.png">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="">
